Updated publisher/subscriber to use Aeron udp multicast.